--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <header>
             
-            <div class="logo"><a href="art website.html"><img alt="logo" class="logo" src="/Users/christinaball/WEBSITE/images/Untitled_Artwork+copy+copy.png"></a></div>
+            <div class="logo"><a href="index.html"><img alt="logo" class="logo" src="Untitled_Artwork+copy+copy.png"></a></div>
             <div><h1 class="title">CHRISTINA'S ART MARKET</h1></div>
             <div></div>
             <div class="shopping">
