--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <header>
             
-            <div class="logo"><a href="index.html"><img alt="logo" class="logo" src="Untitled_Artwork+copy+copy.png"></a></div>
+            <div class="logo"><a href="index.html"><img alt="logo" class="logo" src="images/Untitled_Artwork+copy+copy.png"></a></div>
             <div><h1 class="title">CHRISTINA'S ART MARKET</h1></div>
             <div></div>
             <div class="shopping">
@@ -42,7 +42,7 @@
                     <li><a href="tote_bags.html">TOTE BAGS</a></li>
                     <li><a href="commissions.html">COMMISSIONS</a></li>
                 </ul></div>
-                <div class="picture"></div>
+                <img class="picture" alt="picture" src="images/DSC_0150.png">
             </p>
                 </body>
             <div class="dropdown_menu ">
